--- a/webpage/style.css
+++ b/webpage/style.css
@@ -1,26 +1,80 @@
+body{
+	background-color: lightgrey;
+	
+}
+
+.track{
+        background-color: lightblue;
+
+	width: 50%;
+	height: 150px;
+	font-size: 50px;
+
+}
+
+.artist{
+        background-color: lightblue;
+
+	width: 100%;
+	height: 150px;
+	font-size: 50px;
+}
+
 .button{
+
+	background-color: lightblue;
+
 	width: 100%;
 	height: 200;
 	font-size: 50;
 }
 .player{
 	width: 100%;
-	height: 180px;
+	height: 250px;
 }
 
-.skip{
-font-size: 50;
+.skip-forward{
+        background-color: lightblue;
+
+	/*background-image: url(http://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Fast_forward_font_awesome.svg/1024px-Fast_forward_font_awesome.svg.png)
+        background-repeat:      no-repeat;
+        background-position: center;
+	*/
+	font-size: 50;
   width: 49%;
   height: 180px;
 }
 
+.skip-backward{
+        background-color: lightblue;
+
+	/*
+        background-image: url(http://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Fast_forward_font_awesome.svg/1024px-Fast_forward_font_awesome.svg.png)
+        background-repeat:      no-repeat;
+        background-position: center;
+	*/
+        font-size: 50;
+  width: 49%;
+  height: 180px;
+}
+
+
+
 .play{
-font-size: 50;
-  width:100%;
-  height:180px;
+        background-color: lightblue;
+
+/*
+	background-image: url(http://blog.placeit.net/wp-content/uploads/2015/02/play-icon.png);
+	background-repeat: 	no-repeat;
+	background-position: center;
+*/
+	font-size: 50;
+	width:100%;
+	height:180px;
 }
 
 .volume{
+        background-color: lightblue;
 font-size: 50;
   width: 49%;
   height: 180px;
@@ -33,4 +87,5 @@ font-size: 50;
   height: 180px;
 
 }
+
 
