--- a/webpage/style.css
+++ b/webpage/style.css
@@ -1,20 +1,29 @@
 body{
-	background-color: 21a1de;
+	background-color: red;
 	
 }
 .half-button{
-        background-color: 102457;
-	color: d4dde4;
+        background-color: green;
+	color: blue;
         width: 49%;
         height: 200;
         font-size: 50;
 		
 }
 
+.third-button{
+        background-color: green;
+        color: blue;
+        width: 32%;
+        height: 200;
+        font-size: 40;
+
+}
+
 
 .button{
-	color: d4dde4;
-	background-color: 102457;
+	color: blue;
+	background-color: green;
 	width: 100%;
 	height: 200;
 	font-size: 50;
