--- a/webpage/style.css
+++ b/webpage/style.css
@@ -1,6 +1,6 @@
 body{
-	background-color: 0062ff;
-	font-size: 60px;
+	background-color: 5b2067;
+	font-size: 70px;	
 }
 .half-button{
         background-color: 102457;
