--- a/webpage/template.css
+++ b/webpage/template.css
@@ -2,9 +2,17 @@ body{
 	background-color: @@BACKGROUND@@;
 	font-size: 70px;	
 }
+
+.slider{
+	color: @@BUTTONTEXT@@;
+	background-color: @@BUTTON@@;
+	width:90%;
+	height: 150px;
+	font-size: 30px;
+}
 .half-button{
         background-color: @@BUTTON@@;
-	color: @@BUTTONTEXT@@;
+		color: @@BUTTONTEXT@@;
         width: 49%;
         height: 200;
         font-size: 50;
