--- a/webpage/style.css
+++ b/webpage/style.css
@@ -1,19 +1,23 @@
 body{
-	background-color: 5b2067;
+	color: #ffffff;
+	background-color: #000000;
 	font-size: 70px;	
+	width: 100%;
+	background-repeat: no-repeat;
+	background-size: 100%;
+	/*background-size: cover;*/
 }
 
 .slider{
-	color: d4dde4;
-	background-color: 102457;
+	color: #000000;
+	background-color: #d4dde4;
 	width:90%;
 	height: 150px;
 	font-size: 30px;
 }
-
 .half-button{
-        background-color: 102457;
-		color: d4dde4;
+        background-color: #d4dde4;
+		color: #000000;
         width: 49%;
         height: 200;
         font-size: 50;
@@ -21,8 +25,8 @@ body{
 }
 
 .third-button{
-        background-color: 102457;
-        color: d4dde4;
+        background-color: #d4dde4;
+        color: #000000;
         width: 32%;
         height: 200;
         font-size: 40;
@@ -31,8 +35,8 @@ body{
 
 
 .button{
-	color: d4dde4;
-	background-color: 102457;
+	color: #000000;
+	background-color: #d4dde4;
 	width: 100%;
 	height: 200;
 	font-size: 50;
@@ -45,5 +49,5 @@ body{
 .text{
 	font-size: 50;
 	text-align: center;
-	color: d4dde4;
+	color: #d4dde4;
 }
